# mail-ru-task

./: CMakeLists.txt  README.md  main.c  main.sh
include/: client.h  const.h  cube_iproto.h  server-mock.h  server.h  test.h
server-mock/: CMakeLists.txt  server.c  server.h
src/: client.c  cube_iproto.c  main.c  server-mock.c  server.c
test/: CMakeLists.txt  test.c  test_buildCubeInt32.c  test_buildCubeString.c  test_buildRequest.c  test_createSocket.c  test_getIpByHostname.c  test_parseCubeInt32.c  test_parseCubeString.c  test_printResponseErrDbError.c
